* Mon May 22 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.2-0
- Fix bug whereby audit.rules file was not being regenerated prior
  to auditd service start in CentOS/RedHat 6.
- Update puppet version in metadata.json

* Mon Mar 27 2017 Nicholas Hughes <nicholasmhughes@github.com> - 7.0.1-0
- Audit kernel module tools from /usr/bin as well as /bin and /sbin
- Correct auditing /var/log/tallylock, it should have been /var/log/tallylog

* Thu Feb 22 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.1-0
- Changed auditd::failure_mode to '1' by default since the compliant audit
  rules were causing routine system restarts. The new value will default to
  sending printk messages when the buffer is full.
- Changed all rules that were exit,always to be always,exit

* Tue Jan 12 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.0-0
- In response to the DISA STIG Requirements
  - Added 'open_by_handle_at' to the 'access' key
  - Added watches on /varlog/faillock and /var/log/tallylock
  - Added watches on /usr/sbin/insmod and /bin/kmod
  - Added permissions modification notification for 'chmod'
- Renamed auditd::add_rules to auditd::rule
- Split the audit permissions rules into separate lines
- Disabled chmod auditing by default

* Mon Dec 26 2016 Ralph Wright <rwright@onyxpoint.com> - 7.0.0-0
* Mon Dec 26 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.0-0
- Refactor to work in Puppet 4 Changes
- Updated acceptance tests

* Mon Dec 12 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.0-0
- Update version to reflect SIMP6 dependencies

* Fri Dec 09 2016 Nick Markowski <nmarkowski@keywcorp.com> - 7.0.0-0
- Updated global catalysts
- Changed default log facility to local5.
- Added a drop rule for crond events

* Tue Nov 22 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.1.2-0
- Minor cleanup

* Mon Sep 26 2016 Jeanne Greulich, Liz Nemsick - 5.1.0-0
- Allow user to specify syslog facility and priority for audit record
  messages.